--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -2,7 +2,8 @@
 
 = Introduction =
 
-This project's target is to create a framework with which one it is possible to simulate arbitrary and different types of distributed systems (for example P2P Networks)
+A Java based Visualisation and Simulation Framework for Distributed Systems
+using Java and OpenGL via jogl
 
 
 = Details =
